--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ a{
     color: #000000;
 }
 
-.recipes {
+.recipes,
+.recipe {
     display: flex;
     flex-wrap: wrap;
     max-width: 1000px;
@@ -46,7 +47,10 @@ a{
     align-content: center;
 }
 
-.recipeList {
+.recipeList,
+.description,
+.ingredients,
+.steps {
     margin-bottom: 40px;
     width: 90%;
     border-radius: 5px;
@@ -57,15 +61,6 @@ a{
     word-wrap: break-word;
     background: transparent;
     backdrop-filter: blur(20px);
-}
-
-.recipe {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1000px;
-    margin: 0 auto;
-    justify-content: center;
-    align-content: center;
 }
 
 .title {
@@ -82,45 +77,6 @@ a{
     width: 100%;
     height: 400px;
     object-fit: cover;
-}
-
-.description {
-    margin-bottom: 40px;
-    width: 90%;
-    border-radius: 5px;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    justify-content: space-around;
-    padding: 10px;
-    word-wrap: break-word;
-    background: transparent;
-    backdrop-filter: blur(20px);
-}
-
-.ingredients {
-    margin-bottom: 40px;
-    width: 90%;
-    border-radius: 5px;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    justify-content: space-around;
-    padding: 10px;
-    word-wrap: break-word;
-    background: transparent;
-    backdrop-filter: blur(20px);
-}
-
-.steps {
-    margin-bottom: 40px;
-    width: 90%;
-    border-radius: 5px;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    justify-content: space-around;
-    padding: 10px;
-    word-wrap: break-word;
-    background: transparent;
-    backdrop-filter: blur(20px);
 }
 
 .links {
